--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
     "@reduxjs/toolkit": "^2.2.1",
     "next": "14.1.3",
     "react": "^18",
