--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^2.2.1",
     "next": "14.1.3",
     "react": "^18",
